Fixed CD Baby player on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,376 +21,10 @@ $albumBreak: 680px;
 	transform: translateX($xpos);
 }
 
-/* ============ */
-/* == GLOBAL == */
-/* ============ */
-
-*, *::before, *::after {
-	box-sizing: border-box;
-}
-
-html, body {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	overflow-x: hidden;
-}
-
-body {
-	font-family: sans-serif;
-	font-size: 18px;
-}
-
-img {
-	max-width: 100%;
-}
-
-a {
-	text-decoration: none;
-}
-
-ul {
-	list-style: none;
-	padding: 0;
-}
-
-hr {
-	border: none;
-	height: 4px;
-	background: rgba(50, 50, 50, 0.15);
-	border-radius: 50%;
-	width: 80%;
-}
-
-header {
-	width: 100%;
-	height: $headerBgHeight;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 3;
-
-	.background-pane {
-		display: flex;
-		flex-flow: center;
-		align-items: center;
-		align-content: center;
-		width: 100%;
-		height: $headerBgHeight;
-		background-color: #000;
-		opacity: 1;
-		color: #fff;
-
-		.title {
-			flex-grow: 1;
-			text-align: center;
-			font-size: 1.5em;
-			text-shadow: 2px 2px 0px $redColor;
-
-			img {
-				max-height: $headerBgHeight / 2;
-				margin-top: 20px;
-			}
-		}
-	}
-}
-
-.page-title {
-	text-align: center;
-	font-size: 3em;
-	color: #fff;
-	margin: 0 0 80px;
-	padding: 30px 0;
-	background: #000;
-	text-shadow: 2px 2px 0px $redColor;
-}
-
-/* ================= */
-/* == SIDEDRAWER == */
-/* ================= */
+@import "globals";
 @import "side-drawer";
-
-/* ================== */
-/* == HERO/LANDING == */
-/* ================== */
-
-// Container
-.artist-hero {
-	width: 100%;
-	height: 100vh;
-	background-size: cover;
-	background-position: 50% 100%;
-	background-repeat: no-repeat;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	position: relative;
-	transition: all 2s ease;
-
-	// Overlay
-	.landing-overlay {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-	}
-
-	// Title
-	.artist-name {
-		color: #fff;
-		text-shadow: 2px 2px 0px $redColor;
-
-		h1 {
-			margin: 0;
-			& + span {
-				font-size: 2em;
-			}
-		}
-
-		@media screen and (min-width: 980px) {
-			position: absolute;
-			top: 20%;
-			right: 8%;
-		}
-
-		@media screen and (max-width: 1200px) {
-			position: absolute;
-			top: 30%;
-			right: 8%;
-		}
-	}
-
-	// Social Media Links
-	.social-media {
-		width: 100%;
-		display: block;
-		position: absolute;
-		left: 0;
-		bottom: 0;
-
-		.to-next {
-			display: block;
-			position: absolute;
-			top: -100%;
-			left: 50%;
-			color: rgba(187, 12, 0, 0.7);
-			opacity: 0;
-			text-shadow: 0 0 0 #fff;
-			cursor: pointer;
-
-			i {
-				transition: all 0.4s ease;
-			}
-
-			&:hover i {
-				transform: scale(1.25);
-			}
-		}
-
-		li {
-			text-align: center;
-			display: inline-block;
-
-			@media screen and (max-width: 634px) {
-				margin: 0.5em 0;
-			}
-
-			a {
-				color: rgba(255, 255, 255, 1);
-				padding: 0 0.5em;
-				text-shadow: 2px 2px 0px $redColor;
-				opacity: 0.8;
-				-webkit-transition: all 0.4s ease;
-				font-size: 1.5em;
-
-				&:hover {
-					opacity: 1;
-					text-shadow: 0px 0px 0px $redColor;
-				}
-			}
-		}
-	}
-}
-
-/* =================== */
-/* == MUSIC SECTION == */
-/* =================== */
-
-#album-section {
-	padding-bottom: 80px;
-	position: relative;
-
-	&::after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-image: url(../img/pelican-beach.jpg);
-		background-repeat: no-repeat;
-		background-size: cover;
-		z-index: -999;
-		opacity: 0.7;
-	}
-
-	.embeded-player {
-		max-width: 1000px;
-		height: 470px;
-		margin: 0 auto;
-		overflow: hidden;
-		border: 2px solid rgba(0, 0, 0, 0.2);
-		border-radius: 4px;
-		position: relative;
-
-		&::after {
-			content: 'Click on a track for a 30 second preview.';
-			position: absolute;
-			bottom: 1em;
-			left: 1em;
-			color: rgba(0, 0, 0, 0.8);
-			font-size: 90%;
-		}
-
-		iframe {
-			width: 100%;
-			height: 520px;
-			border: 0px;
-		}
-	}
-}
-
-// slick.albums {
-
-// 	.slick-arrow {
-// 		position: absolute;
-// 		top: 50%;
-// 		transform: translateY(-50%);
-// 		color: rgba(187, 12, 0, 0.2);
-// 		cursor: pointer;
-// 		z-index: 1;
-// 	}
-
-// 	.arrow-left {
-// 		left: 5%;
-		
-// 		@media screen and (min-width: 1000px) {
-// 			left: 15%;
-// 		}
-// 	}
-
-// 	.arrow-right {
-// 		right: 5%;
-
-// 		@media screen and (min-width: 1000px) {
-// 			right: 15%;
-// 		}
-// 	}
-
-// 	.album {
-
-// 		.container {
-// 			margin: 0 auto;
-// 			text-align: center;
-// 			max-width: 680px;
-
-// 			@media screen and (min-width: $albumBreak) {
-// 				text-align: left;
-// 				padding: 0 30px;
-// 			}
-
-// 			.artwork {
-// 				width: 200px;
-// 				height: 200px;
-// 				display: block;
-// 				margin: 0 auto 10px;
-// 				border-radius: 2px;
-
-// 				@media screen and (min-width: $albumBreak) {
-// 					float: left;
-// 					margin-right: 40px;
-// 				}
-// 			}
-
-// 			& > div, .album-title, .buy-link {
-// 				margin: 0 0 10px 0;
-// 			}
-
-// 			.buy-link {
-// 				display: inline-block;
-// 				margin-top: 30px;
-// 				border: 1px solid $redColor;
-// 				border-radius: 4px;
-// 				width: 190px;
-// 				text-align: center;
-// 				padding: 5px 0;
-// 				color: $redColor;
-// 			}
-
-// 			.track-count {
-// 				width: 100%;
-// 				float: left;
-// 				font-size: 14px;
-// 				color: rgba(151, 151, 151, 0.4);
-// 				margin: 30px 0;
-// 			}
-
-// 			.album-tracks {
-// 				margin: 0 auto;
-// 				color: $textColor;
-// 				text-align: left;
-// 				-webkit-column-count: 2;
-// 				-moz-column-count: 2;
-// 				-webkit-column-fill: balance;
-// 				-moz-column-fill: balance;
-
-
-// 				@media screen and (min-width: $albumBreak) {
-// 					float: left;
-// 				}
-
-// 				ul {
-// 					@media screen and (min-width: $albumBreak) {
-// 						padding-left: 20px;
-// 						border-left: 1px solid rgba(151, 151, 151, 0.4);
-// 						margin-top: 0;
-// 					}
-
-// 					li {
-// 						display: block;
-// 						width: 300px;
-// 						margin: 0 auto 10px;
-
-// 						span:nth-child(1) {
-// 							display: inline-block;
-// 							width: 30px;
-// 							text-align: right;
-// 							margin-right: 20px;
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-// }
-
-
-/* ==================== */
-/* == PHOTOS SECTION == */
-/* ==================== */
+@import "landing-page";
+@import "music-section";
 @import "photo-grid";
-
-/* ==================== */
-/* == VIDEOS SECTION == */
-/* ==================== */
 @import "video-grid";
-
-/* ============ */
-/* == FOOTER == */
-/* ============ */
 @import "footer"
